# phosh-wallpaperd

./: meson.build
.github/workflows/: CI-master.yml
data/: meson.build  phosh-wallpaperd.service.in  ru.alt-gnome.phosh-wallpaperd.gschema.xml.in
src/: css-writer.vala  main.vala  meson.build  utils.vala  wallpaper-watcher.vala
